@@ -5,6 +5,8 @@
    channels.conf if channels.conf.ter is not found.
  * Removed the "Jump..." item from the tv and radio menus. The actions
    are still available.
+ * (Playlist) Fix: don't try to a load pls file if the file doesn't exist.
+   Prevents QSettings to create subdirectories pointing to that file.
 
 (2009-07-13)
  * Moved the option "Visualize motion vectors" from menu Options to menu
